<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/TXVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textSize="@dimen/textsizetitle"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTopFirst"


        />
    <GridLayout
        android:id="@+id/GRLTablero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_below="@id/TXVTitle"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:rowCount="4"
        android:alignmentMode="alignMargins"

        >
        <Button
            android:id="@+id/BTN01"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="1"
            />
        <Button
            android:id="@+id/BTN02"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="2"
            />
        <Button
            android:id="@+id/BTN03"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="3"
            />
        <Button
            android:id="@+id/BTN04"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="4"
            />
        <Button
            android:id="@+id/BTN05"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="5"
            />
        <Button
            android:id="@+id/BTN06"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="6"
            />
        <Button
            android:id="@+id/BTN07"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="7"
            />
        <Button
            android:id="@+id/BTN08"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="8"
            />
        <Button
            android:id="@+id/BTN09"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="9"
            />
        <Button
            android:id="@+id/BTN10"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="10"
            />
        <Button
            android:id="@+id/BTN11"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="11"
            />
        <Button
            android:id="@+id/BTN12"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="12"
            />
        <Button
            android:id="@+id/BTN13"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="13"
            />
        <Button
            android:id="@+id/BTN14"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="14"
            />
        <Button
            android:id="@+id/BTN15"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text="15"
            />
        <Button
            android:id="@+id/BTN00"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/dimenHeigth"
            android:layout_margin="@dimen/buttonMargin"
            android:textSize="@dimen/buttonTextSize"
            android:text=" "
            />

    </GridLayout>
    <TextView
        android:id="@+id/TXVMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GRLTablero"
        android:text="@string/Mensaje"
        android:textSize="@dimen/textSizeNormal"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:textColor="@color/black"
        android:visibility="visible"
        >
    </TextView>

    <Button
        android:id="@+id/BTNReboot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TXVMessage"
        android:layout_centerHorizontal="true"
        android:text="@string/ReiniciarJuego"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/textSizeNormal"
        android:visibility="visible"
        >

    </Button>
    <Button
        android:id="@+id/BTNMess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Desordenar"
        android:layout_below="@+id/BTNReboot"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/textSizeNormal"
        android:visibility="visible"
        >
    </Button>
    <Button
        android:id="@+id/BTNVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BTNMess"
        android:layout_centerHorizontal="true"
        android:text="@string/Verificar"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/textSizeNormal"
        android:visibility="visible"
        >

    </Button>
</RelativeLayout>